--- a/package.json
+++ b/package.json
@@ -8,18 +8,24 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "color": "^3.1.2",
     "cryptocurrency-icons": "^0.16.1",
-    "portfolio-allocation": "^0.0.7",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "portfolio-allocation": "^0.0.8",
     "portfolio-analytics": "^0.0.4",
-    "portfolio-tools": "desert-defi/portfolio-tools",
+    "portfolio-tools": "desert-defi/portfolio-tools#dadcff1e330642c009b64b792360f025a5e937ed",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-icons-kit": "^1.3.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1",
+    "react-scripts": "3.4.1",
+    "react-test-renderer": "^16.12.0",
     "react-use": "^13.27.0",
     "styled-components": "^4.3.2",
     "styled-normalize": "^8.0.7",
@@ -31,7 +37,7 @@
     "build-storybook": "build-storybook -s public",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!portfolio-tools)/\" --env=jsdom",
     "eject": "react-scripts eject",
     "serve": "serve build",
     "deploy": "now --prod",
@@ -54,10 +60,6 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.2.0",
-    "@storybook/addon-links": "^5.2.0",
-    "@storybook/addons": "^5.2.0",
-    "@storybook/react": "^5.2.0",
     "react-svg-loader": "^3.0.3"
   }
 }
